--- a/SIA/SIA/SIA.csproj
+++ b/SIA/SIA/SIA.csproj
@@ -61,6 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormNotaPenjualan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNotaPenjualan.Designer.cs">
+      <DependentUpon>FormNotaPenjualan.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUtama.cs">
       <SubType>Form</SubType>
     </Compile>
