--- a/SIA/SIA/SIA.csproj
+++ b/SIA/SIA/SIA.csproj
@@ -73,6 +73,12 @@
     <Compile Include="FormNotaPenjualan.Designer.cs">
       <DependentUpon>FormNotaPenjualan.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSuratJalan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSuratJalan.Designer.cs">
+      <DependentUpon>FormSuratJalan.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUtama.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormNotaPenjualan.resx">
+      <DependentUpon>FormNotaPenjualan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
