--- a/SIA/SIA/SIA.csproj
+++ b/SIA/SIA/SIA.csproj
@@ -61,6 +61,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormEkspedisi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEkspedisi.Designer.cs">
+      <DependentUpon>FormEkspedisi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormJobOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormJobOrder.Designer.cs">
+      <DependentUpon>FormJobOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +97,30 @@
     <Compile Include="FormPembayaran.Designer.cs">
       <DependentUpon>FormPembayaran.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPenerimaan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPenerimaan.Designer.cs">
+      <DependentUpon>FormPenerimaan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPenerimaanPembayaran.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPenerimaanPembayaran.Designer.cs">
+      <DependentUpon>FormPenerimaanPembayaran.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPengiriman.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPengiriman.Designer.cs">
+      <DependentUpon>FormPengiriman.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPermintaan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPermintaan.Designer.cs">
+      <DependentUpon>FormPermintaan.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUtama.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +129,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuratJalan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SuratJalan.Designer.cs">
+      <DependentUpon>SuratJalan.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
