--- a/SIA/ClassLibraryJurnal/ClassLibraryJurnal.csproj
+++ b/SIA/ClassLibraryJurnal/ClassLibraryJurnal.csproj
@@ -30,8 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\MySql_References\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +50,7 @@
     <Compile Include="Akun.cs" />
     <Compile Include="DetilJurnal.cs" />
     <Compile Include="Jurnal.cs" />
+    <Compile Include="Koneksi.cs" />
     <Compile Include="Laporan.cs" />
     <Compile Include="LaporanAkun.cs" />
     <Compile Include="Periode.cs" />
