--- a/SIA/ClassLibraryTransaksi/ClassLibraryTransaksi.csproj
+++ b/SIA/ClassLibraryTransaksi/ClassLibraryTransaksi.csproj
@@ -30,8 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\MySql_References\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +56,7 @@
     <Compile Include="Ekspedisi.cs" />
     <Compile Include="JobOrder.cs" />
     <Compile Include="Karyawan.cs" />
+    <Compile Include="Koneksi.cs" />
     <Compile Include="NotaPembelian.cs" />
     <Compile Include="NotaPenjualan.cs" />
     <Compile Include="Pelanggan.cs" />
