--- a/SIA/SistemAkuntansi/SistemAkuntansi.csproj
+++ b/SIA/SistemAkuntansi/SistemAkuntansi.csproj
@@ -106,11 +106,11 @@
     <Compile Include="FormDaftarJobOrder.Designer.cs">
       <DependentUpon>FormDaftarJobOrder.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormLogin.cs">
+    <Compile Include="FormAkun.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormLogin.Designer.cs">
-      <DependentUpon>FormLogin.cs</DependentUpon>
+    <Compile Include="FormAkun.Designer.cs">
+      <DependentUpon>FormAkun.cs</DependentUpon>
     </Compile>
     <Compile Include="FormDaftarPembayaran.cs">
       <SubType>Form</SubType>
@@ -141,6 +141,12 @@
     </Compile>
     <Compile Include="FormDaftarPermintaan.Designer.cs">
       <DependentUpon>FormDaftarPermintaan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLogin.designer.cs">
+      <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTambahJobOrder.cs">
       <SubType>Form</SubType>
@@ -196,10 +202,16 @@
     <Compile Include="FormTambahSuratPermintaan.Designer.cs">
       <DependentUpon>FormTambahSuratPermintaan.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPeriode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPeriode.Designer.cs">
+      <DependentUpon>FormPeriode.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUtama.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormUtama.Designer.cs">
+    <Compile Include="FormUtama.designer.cs">
       <DependentUpon>FormUtama.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -249,6 +261,9 @@
     <EmbeddedResource Include="FormDaftarSuratJalan.resx">
       <DependentUpon>FormDaftarSuratJalan.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormLogin.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTambahJobOrder.resx">
       <DependentUpon>FormTambahJobOrder.cs</DependentUpon>
     </EmbeddedResource>
@@ -276,6 +291,9 @@
     <EmbeddedResource Include="FormTambahSuratPermintaan.resx">
       <DependentUpon>FormTambahSuratPermintaan.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormPeriode.resx">
+      <DependentUpon>FormPeriode.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormUtama.resx">
       <DependentUpon>FormUtama.cs</DependentUpon>
     </EmbeddedResource>
@@ -287,6 +305,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -322,6 +341,18 @@
       <Project>{e06b8296-b929-415b-83f8-63c2a3b6d676}</Project>
       <Name>ClassLibraryTransaksi</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\password.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\profil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\username.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
